src/scss/cagov/site-header.scss
/* -----------------------------------------
   SITE HEADER -  /source/scss/cagov/site-header.scss (branding)
----------------------------------------- */

.branding {
  @include container;
  padding-left: 0;
  padding-right: 0;
  position: relative;

  // 992px
  @media (min-width: $screen-md-min) {
    position: unset;
  }

  .header-organization-banner {
    -webkit-transition: all 0.3s;
    transition: all 0.3s; // Smooth transition for compact header
    padding: 0.5rem 0 0.5rem 1rem;
    // 991px
    @media (max-width: $screen-sm-max) {
      position: relative;
      max-width: 400px;
      margin-left: 1rem;
      margin-right: 20%;
      padding-top: 0.5rem;
      padding-left: 0;
      padding-bottom: 0.5rem;
      display: flex;
      align-content: center;
    }

    img {
      max-width: 300px;
      max-height: 55px;
      object-fit: contain !important;
      object-position: left;

      @media (max-width: $screen-md) and (min-width: $screen-sm-min) {
        max-width: 225px;
      }

      @media (max-width: $screen-sm-max) {
        max-height: 44px;
      }
    }

    // Move logo above navigation
    a {
      position: relative;
      text-decoration: none;
      color: black;
      background-image: none;
      display: inline-block;
      &:focus {
        @include outline(2px);
      }

      .logo-assets {
        display: flex;
        flex-flow: wrap;
        min-height: 4rem;
        align-items: center;

        .logo-img {
          max-width: 100%;
          height: auto;
          display: inline-block;
          transition: all 0.3s;
        }

        .logo-text {
          padding-left: 5px;
          // 991px
          .logo-state {
            font-size: 1rem;
            font-family: "Public Sans", sans-serif;
            margin: 0;
            padding: 0;
            color: $gray-900;
            height: 20px;
            line-height: 1.2em;
            transition: all 0.3s;
            display: block;
            @media (max-width: $screen-sm-max) {
              font-size: 0.78125rem;
            }
          }
          .logo-dept {
            font-size: 1.75rem;
            font-family: "Public Sans", sans-serif;
            font-weight: 700;
            margin: 0;
            padding: 0;
            color: $color-p3;
            height: 24px;
            line-height: 1.2em;
            transition: all 0.3s;
            display: block;
            @media (max-width: $screen-sm-max) {
              font-size: 1rem;
            }
          }
        }

        // MOBILE 992px
        @media (max-width: $screen-sm-max) {
          min-height: auto;
        }
      }
    }
  }
}

// FIXED HEADER LOGO
.fixed.compact .branding .header-organization-banner {
  .logo-assets {
    .logo-img {
      width: 70px;
    }

    .logo-text {
      .logo-state {
        font-size: 0.8rem;
        line-height: 1em;
        height: 16px;
        min-width: 200px;
      }
      .logo-dept {
        font-size: 1.2rem;
        line-height: 1em;
        min-width: 200px;
      }
    }
  }
}

//
// COMPACT MENU LOOK AND FEEL
// --------------------------------------------------

@media (min-width: $screen-sm-min) {
  .fixed.compact {
    .header-organization-banner {
      height: 55px; // Beta 5.0 addition
      max-height: 45px; // Beta 5.0 addition
      a {
        max-width: 225px; // Beta 5.0 addition
      }
    }
  }
}

